--- a/source/_patterns/basics/buttons/button-icon-variations.hbs
+++ b/source/_patterns/basics/buttons/button-icon-variations.hbs
@@ -1,17 +1,12 @@
-{{> basics-button-icon btnText="" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="" ariaLabeledBy="Home"}}
-{{> basics-button-icon btnText="" btnClass="btn-link" iconFamily="fa" iconName="fa-ellipsis-v" iconModifier="" ariaLabeledBy="Kebab"}}
+{{> basics-button-icon btnText="" btnClass="btn-link" iconFamily="fa" iconName="fa-ellipsis-v" iconModifier="" btnAriaLabel="Kebab" tooltip="More actions"}}
 
 <br/>
 
-{{> basics-button-icon btnText="" btnClass="btn-link" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--lg" ariaLabeledBy="Home"}}
-{{> basics-button-icon btnText="" btnClass="btn-link" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--md" ariaLabeledBy="Home"}}
-{{> basics-button-icon btnText="" btnClass="btn-link" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--sm" ariaLabeledBy="Home"}}
+{{> basics-button-icon btnText="" btnClass="btn-link" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--lg" btnAriaLabel="Home" tooltip="Home"}}
+{{> basics-button-icon btnText="" btnClass="btn-link" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--md" btnAriaLabel="Home" tooltip="Home"}}
+{{> basics-button-icon btnText="" btnClass="btn-link" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--sm" btnAriaLabel="Home" tooltip="Home"}}
 
-<br/>
-
-{{> basics-button-icon btnText="" btnClass="btn-primary" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--md" ariaLabeledBy="Home"}}
-{{> basics-button-icon btnText="" btnClass="btn-secondary" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--md" ariaLabeledBy="Home"}}
-{{> basics-button-icon btnText="" btnClass="btn-success" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--md" ariaLabeledBy="Home"}}
-{{> basics-button-icon btnText="" btnClass="btn-info" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--md" ariaLabeledBy="Home"}}
-{{> basics-button-icon btnText="" btnClass="btn-warning" iconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--md" ariaLabeledBy="Home"}}
-{{> basics-button-icon btnText="" btnClass="btn-danger" iiconFamily="pf-icon" iconName="pf-icon-home" iconModifier="pf-icon--md" ariaLabeledBy="Home"}}
+<!-- Should we use aria-label instead of aria-labelledby? I made the change here, but aria-labelled by is also being used for dropdowns-->
+<!-- Should we remove the default value for btnAriaLabelledby from data.json? Assuming we would only need the aria-label attribute in examples of buttons with icons only.  -->
+<!-- Should we provide examples of the tooltip widget even though it isn't enabled in our site? I already made the change to include the attributes needed for the tooltip-->
+<!-- If so, should we note in the .md file why it's included and include a link to the bootstrap page for more info? -->
