--- a/source/_patterns/basics/forms/static-controls.hbs
+++ b/source/_patterns/basics/forms/static-controls.hbs
@@ -4,7 +4,7 @@
   <form>
 
     {{> basics-form-group formRightAligned=true formStaticControl=true
-    formLabel="Email" formStaticControlText="example@patternfly.org" }}
+    formLabel="Email" labelID="staticControlLabel" formStaticControlText="example@patternfly.org" }}
 
     {{> basics-form-group formRightAligned=true formLabel="Password"
     formInputType="password" formInputId="example-input-static" }}
