--- a/source/_patterns/basics/icons/icon.hbs
+++ b/source/_patterns/basics/icons/icon.hbs
@@ -1,1 +1,1 @@
-<span class="{{ iconFamily }} {{ iconName }} {{iconModifier}}"></span>
+<span class="{{ iconFamily }} {{ iconName }} {{iconModifier}}" aria-hidden="true"></span>
