--- a/source/_patterns/components/alerts/alert-dismissable.hbs
+++ b/source/_patterns/components/alerts/alert-dismissable.hbs
@@ -2,7 +2,7 @@
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span class="pf-icon pf-icon-close" aria-hidden="true"></span>
   </button>
-  <span class="pf-alert__icon pf-icon pf-icon-warning-triangle-o"></span>
+  <span class="pf-alert__icon pf-icon pf-icon-warning-triangle-o" aria-hidden="true"></span>
   <div class="pf-alert__text">
     <strong>There might be a problem here!</strong> We are not really sure, but <a href="#" class="alert-link">it might be bad</a>.
   </div>
