--- a/source/_patterns/components/dropdowns/dropdown-styles.hbs
+++ b/source/_patterns/components/dropdowns/dropdown-styles.hbs
@@ -5,4 +5,4 @@
 {{> components-dropdown dropdownText= "Info" btnClass="btn-info" }}
 {{> components-dropdown dropdownText= "Warning" btnClass="btn-warning" }}
 {{> components-dropdown dropdownText= "Danger" btnClass="btn-danger" }}
-{{> components-dropdown isKebab= true }}
+{{> components-dropdown isKebab= true  btnAriaLabel="More actions" }}
