--- a/source/_patterns/components/view-selector/view-selector.hbs
+++ b/source/_patterns/components/view-selector/view-selector.hbs
@@ -1,5 +1,5 @@
 <div class="pf-view-selector" role="group" aria-label="View selector">
-  {{> basics-button-icon btnText="" btnClass="btn-link pf-view-selector__btn-link" iconFamily="fa" iconName="fa-th" iconModifier="" ariaLabeledBy="Table View"}}
-  {{> basics-button-icon btnText="" btnClass="btn-link pf-view-selector__btn-link active" iconFamily="fa" iconName="fa-th-large" iconModifier="" ariaLabeledBy="Card View"}}
-  {{> basics-button-icon btnText="" btnClass="btn-link pf-view-selector__btn-link" iconFamily="fa" iconName="fa-th-list" iconModifier="" ariaLabeledBy="List View"}}
+  {{> basics-button-icon btnText="" btnClass="btn-link pf-view-selector__btn-link" iconFamily="fa" iconName="fa-th" iconModifier="" btnAriaLabel="Table view" tooltip="Table view"}}
+  {{> basics-button-icon btnText="" btnClass="btn-link pf-view-selector__btn-link active" iconFamily="fa" iconName="fa-th-large" iconModifier="" btnAriaLabel="Card view" tooltip="Card view"}}
+  {{> basics-button-icon btnText="" btnClass="btn-link pf-view-selector__btn-link" iconFamily="fa" iconName="fa-th-list" iconModifier="" btnAriaLabel="List view" tooltip="List view"}}
 </div>
