--- a/source/_patterns/basics/buttons/button-icon.hbs
+++ b/source/_patterns/basics/buttons/button-icon.hbs
@@ -1,3 +1,3 @@
-{{#> basics-button  btnClass=this.btnClass btnAriaLabelledby=this.btnAriaLabelledby }}
+{{#> basics-button  btnClass=this.btnClass btnAriaLabel=this.btnAriaLabel }}
   {{> basics-icon iconFamily=this.iconFamily iconName=this.iconName iconModifier=this.iconModifier }}
 {{/ basics-button}}
