--- a/source/_patterns/components/pagination/pagination.hbs
+++ b/source/_patterns/components/pagination/pagination.hbs
@@ -8,7 +8,7 @@
     </li>
     <li class="page-item"><a class="page-link" href="#">1</a></li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item active"><a class="page-link" href="#">3</a></li>
+    <li class="page-item active" aria-selected="true"><a class="page-link" href="#">3</a></li>
     <li class="page-item"><a class="page-link" href="#">4</a></li>
     <li class="page-item"><a class="page-link" href="#">5</a></li>
     <li class="page-item">
