included accessibility notes in .md; made changes based on review

--- a/source/_patterns/basics/buttons/button.hbs
+++ b/source/_patterns/basics/buttons/button.hbs
@@ -1,4 +1,4 @@
-<button class="btn {{ btnClass }}" {{#if btnAriaLabel}}aria-label="{{ btnAriaLabel }}" {{/if}}type="{{ btnType }}" {{#if tooltip}} data-toggle="tooltip" data-placement="right" title="{{tooltip}}"{{/if}}>
+<button class="btn {{ btnClass }}" {{#if btnAriaLabel}}aria-label="{{ btnAriaLabel }}" {{/if}}type="{{ btnType }}" {{#if tooltip}} data-toggle="tooltip" data-placement="right" title="{{tooltip}}"{{/if}} {{attributes}}>
  {{#if @partial-block}}
    {{> @partial-block }}
  {{/if}}
