--- a/source/_patterns/components/pagination/pagination.hbs
+++ b/source/_patterns/components/pagination/pagination.hbs
@@ -1,4 +1,4 @@
-<nav aria-label="Page navigation">
+<nav aria-label="Page navigation" role="navigation">
   <ul class="pagination {{ paginationClass }}">
     <li class="page-item disabled">
       <a class="page-link" href="#" aria-label="Previous">
