--- a/source/_patterns/basics/forms/input.hbs
+++ b/source/_patterns/basics/forms/input.hbs
@@ -2,5 +2,5 @@
 id="{{formInputId}}" type="{{ formInputType}}" value="{{ formInputValue }}"
 placeholder="{{ formInputPlaceholder }}" {{#if formDisabled}}disabled{{/if}}
 {{#if formHelp}} aria-describedby="{{formHelpId}}"{{/if}}
-{{#if hasError}} aria-errormessage="{{formMessageId}}" aria-invalid="true"
-{{else formFeedbackMessage }} aria-describedby="{{formMessageId}}"{{/if}}>
+{{#if formFeedbackMessage }} aria-describedby="{{formMessageId}}"{{/if}}
+{{#if hasError}} aria-invalid="true"{{/if}}>
