--- a/source/_patterns/basics/forms/validation.hbs
+++ b/source/_patterns/basics/forms/validation.hbs
@@ -1,8 +1,8 @@
 {{> basics-form-group formGroupModifierClass="has-success"
-formFeedbackMessage=true formMessageId="example-sucess-message" formInputId="example-sucess"}}
+formFeedbackMessage=true formMessageId="example-success-message" formInputId="example-success"}}
 
 {{> basics-form-group formGroupModifierClass="has-warning"
 formFeedbackMessage=true formMessageId="example-warning-message" formInputId="example-warning"}}
 
 {{> basics-form-group formGroupModifierClass="has-danger"
-formFeedbackMessage=true formMessageId="example-danger-message" formInputId="example-danger" hasError="true" }}
+formFeedbackMessage=true formMessageId="example-danger-message" formInputId="example-danger" hasError=true }}
