--- a/source/_patterns/components/breadcrumbs/breadcrumb.hbs
+++ b/source/_patterns/components/breadcrumbs/breadcrumb.hbs
@@ -1,6 +1,8 @@
-<ol class="breadcrumb">
-  {{#each breadcrumbList}}
-    <li class="breadcrumb-item"><a href="#">{{ this }}</a></li>
-  {{/each}}
-  <li class="breadcrumb-item active"><strong>Fourth Level:</strong> Detail about fourth level</li>
-</ol>
+<nav role="navigation">
+  <ol class="breadcrumb">
+    {{#each breadcrumbList}}
+      <li class="breadcrumb-item"><a href="#">{{ this }}</a></li>
+    {{/each}}
+    <li class="breadcrumb-item active" aria-selected="true"><strong>Fourth Level:</strong> Detail about fourth level</li>
+  </ol>
+</nav>
