adds horizontal nav

--- a/source/_patterns/templates/basic-template.hbs
+++ b/source/_patterns/templates/basic-template.hbs
@@ -1,9 +1,12 @@
+{{> components-masthead }}
+{{> components-horizontal-nav }}
+
+
 <div class="container-fluid">
   <h1>Basic Page Title</h1>
   <p>This is a basic template with some of the elements that are avaliable on PatternFly 5 CSS</p>
 
-  {{> components-tabs tabsSecondaryLevel="true"
-  tabsSecondaryDropdown="true" }}
+  {{> components-tabs tabsSecondaryLevel="true" tabsSecondaryDropdown="true" }}
 
 
   <div class="row">
