--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -59,6 +59,7 @@ limitations under the License.
 @import "node_modules/bootstrap/scss/nav";
 @import "pf-nav";
 @import "node_modules/bootstrap/scss/navbar";
+@import "pf-navbar";
 @import "node_modules/bootstrap/scss/card";
 @import "pf-card";
 @import "node_modules/bootstrap/scss/breadcrumb";
