--- a/source/_patterns/components/navigation/navlink.hbs
+++ b/source/_patterns/components/navigation/navlink.hbs
@@ -1,13 +1,9 @@
-<li class="nav-item {{liClass}} {{#if dropdown}}show{{/if}}">
-    <a class="nav-link {{#if active}}active{{/if}} {{aClass}} {{#if dropdown}}dropdown-toggle{{/if}}" href="#" {{#if dropdown}}data-toggle="dropdown"  role="button" aria-haspopup="true" aria-expanded="true"{{/if}}>
-      {{#if @partial-block}}
-        {{> @partial-block}}
-      {{else}}
-        {{{linkText}}}
-      {{/if}}
+<li class="nav-item {{liClass}} {{#if dropdown}}dropdown show{{/if}}">
+    <a class="nav-link {{#if active}}active{{/if}} {{aClass}} {{#if dropdown}}dropdown-toggle{{/if}}" href="#" {{#if dropdown}}data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"{{/if}}>
+      {{#if linkIcon}}<span class="{{ iconFamily }} {{ iconName }}" aria-hidden="true"></span>{{/if}}{{{linkText}}}
     </a>
     {{#if dropdown}}
-    <div class="dropdown-menu dropdown-menu-right">
+    <div class="dropdown-menu dropdown-menu-right" aria-label="{{linkText}}">
       <a class="dropdown-item" href="#">Action</a>
       <a class="dropdown-item" href="#">Another action</a>
       <a class="dropdown-item" href="#">Something else here</a>
