--- a/source/_patterns/components/navigation/utilities.hbs
+++ b/source/_patterns/components/navigation/utilities.hbs
@@ -1,7 +1,5 @@
 {{#>components-nav ulClass="pf-utilities align-items-stretch"}}
   {{>components-navlink liClass="d-flex align-items-stretch" aClass="d-flex align-items-center" linkText="Status"}}
   {{>components-navlink liClass="d-flex align-items-stretch" aClass="d-flex align-items-center" linkText="Link"}}
-  {{#>components-navlink liClass="d-flex align-items-stretch" aClass="d-flex align-items-center" dropdown=true}}
-    {{> basics-icon iconFamily="pf-icon" iconName="pf-icon-user" }}Brian Johnson
-  {{/components-navlink}}
+  {{>components-navlink liClass="d-flex align-items-stretch" aClass="d-flex align-items-center" linkText="Brian Johnson" linkIcon=true iconFamily="pf-icon" iconName="pf-icon-user" dropdown=true}}
 {{/components-nav}}
