--- a/source/_patterns/components/navigation/utilities.hbs
+++ b/source/_patterns/components/navigation/utilities.hbs
@@ -1,5 +1,5 @@
-{{#>components-nav ulClass="pf-utilities align-items-stretch"}}
-  {{>components-navlink liClass="d-flex align-items-stretch" aClass="d-flex align-items-center" linkText="Status"}}
-  {{>components-navlink liClass="d-flex align-items-stretch" aClass="d-flex align-items-center" linkText="Link"}}
-  {{>components-navlink liClass="d-flex align-items-stretch" aClass="d-flex align-items-center" linkText="Brian Johnson" linkIcon=true iconFamily="pf-icon" iconName="pf-icon-user" dropdown=true}}
+{{#>components-nav navModifier="pf-utilities"}}
+  {{>components-navlink linkText="Status"}}
+  {{>components-navlink linkText="Link"}}
+  {{>components-navlink linkText="Brian Johnson" linkIcon=true iconFamily="pf-icon" iconName="pf-icon-user" dropdown=true}}
 {{/components-nav}}
