--- a/source/scss/_pf-masthead.scss
+++ b/source/scss/_pf-masthead.scss
@@ -18,61 +18,92 @@ limitations under the License.
 // --------------------------------------------------
 
 .pf-masthead {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   background-color: $pf-color-black-1000;
   border-top: 3px solid $pf-color-blue-300;
   color: $pf-color-black-300;
+  min-height: 1rem;
   @include media-breakpoint-up(md) {
     padding-left: ($grid-gutter-width-base / 2);
   }
 }
 
 .pf-masthead__skip {
-  position: absolute;
-  left: 150%;
-  color: $pf-color-black-300;
-  font-size: $font-size-sm;
-  margin-left:$pf-spacer-sm;
-  padding-left:$pf-spacer-sm;
-  padding-right:$pf-spacer-sm;
-  &:focus {
-    position: static;
-    order: 99;
+  display: none;
+  @include media-breakpoint-up(lg) {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: -999em;
     color: $pf-color-black-300;
-    background: $pf-color-black-900;
+    font-size: $font-size-sm;
+    margin-left:$pf-spacer-sm;
+    padding-left:$pf-spacer-sm;
+    padding-right:$pf-spacer-sm;
+    &:focus {
+      position: static;
+      order: 99;
+      color: $pf-color-black-300;
+      background: $pf-color-black-900;
+    }
   }
 }
 
+.pf-masthead__section {
+  display: flex;
+  flex: 0 0 auto;
+}
+
 .pf-masthead__navicon {
+  .btn {
+    min-height: 48px;
+  }
   .fa {
     color: $pf-color-black-300;
   }
+  @include media-breakpoint-up(md) {
+    display: none;
+  }
 }
+
 .pf-masthead__brand {
-  padding: $pf-spacer-xxs 0 ;
+  align-self: center;
+  padding: $pf-spacer-xxxs 0 ;
   img {
     margin-right: $pf-spacer-xxs;
   }
 }
 
+.pf-masthead__brand__icon {
+  margin: $pf-spacer-xxxs 0 ;
+}
+
+.pf-masthead__utilities {
+  @include media-breakpoint-down(sm) {
+    display: none;
+  }
+}
+
 .pf-utilities {
   .nav-item {
+    display: flex;
     border-left: 1px solid $pf-color-black-700;
   }
   .nav-link {
+    display: flex;
+    align-items: center;
     color: $pf-color-black-300;
     font-size: $font-size-sm;
-    padding-left:$pf-spacer-sm;
-    padding-right:$pf-spacer-sm;
+    padding: 0 $pf-spacer-sm;
     @include hover {
       background: $pf-color-black-900;
     }
   }
-
   .pf-icon, .fa { margin-right: $pf-spacer-xxxs; }
-
   .nav-item + .nav-item,
   .nav-link + .nav-link {
     margin-left: 0;
   }
-
 }
