additional updates to utilities links

--- a/source/_patterns/components/masthead/masthead.hbs
+++ b/source/_patterns/components/masthead/masthead.hbs
@@ -11,7 +11,7 @@
         <img class="pf-masthead__brand__icon" src="/images/logo-alt.svg" alt="" /><img src="/images/brand.svg" alt="PatternFly Enterprise Application" />
       </a>
     </div>
-    <nav class="pf-masthead__section pf-masthead__utilities" role="navigation" aria-label="Utilities navigation">
+    <nav class="pf-masthead__section pf-utilities" role="navigation" aria-label="Utilities navigation">
       {{>components-utilities}}
     </nav>
   </header>
