--- a/source/_patterns/components/navigation/utilities.hbs
+++ b/source/_patterns/components/navigation/utilities.hbs
@@ -1,4 +1,4 @@
-{{#>components-nav navModifier="pf-utilities"}}
+{{#>components-nav}}
   {{>components-navlink linkText="Status"}}
   {{>components-navlink linkText="Link"}}
   {{>components-navlink linkText="Brian Johnson" linkIcon=true iconFamily="pf-icon" iconName="pf-icon-user" dropdown=true}}
