adds important to utility classes

--- a/source/scss/_pf-colors.scss
+++ b/source/scss/_pf-colors.scss
@@ -93,6 +93,7 @@ $pf-color-red-500:               #2c0000;
 
 $pf-color-white:                 #fff;
 
+// Do we really need these colors?
 // $pf-color-blue:                  $pf-color-blue-400;
 // $pf-color-cyan:                  $pf-color-cyan-400;
 // $pf-color-gold:                  $pf-color-gold-400;
