adds function to convert px to rems

--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -20,6 +20,7 @@ limitations under the License.
 
 // Core: variables and mixins
 @import "pf-colors";
+@import "pf-functions";
 @import "pf-variables";
 @import "node_modules/bootstrap/scss/variables";
 @import "pf-mixins";
