--- a/source/scss/_pf-variables.scss
+++ b/source/scss/_pf-variables.scss
@@ -211,9 +211,10 @@ $brand-inverse:             $gray-dark !default;
 //
 // Quickly modify global styling by enabling or disabling optional features.
 
-$enable-rounded:            false !default;
-$enable-shadows:            true !default;
-$enable-gradients:          true !default;
+$enable-rounded:                      false !default;
+$enable-shadows:                      true !default;
+$enable-gradients:                    true !default;
+$pf-enable-font-overpass-cdn:         false !default;
 
 
 
