Adds a -repo variables and applyes it to all class names

--- a/source/scss/_pf-alert.scss
+++ b/source/scss/_pf-alert.scss
@@ -28,12 +28,12 @@ limitations under the License.
   }
 }
 
-.pf-alert__icon {
+.#{$pf-repo}-alert__icon {
   font-size: $pf-alert-icon-font-size;
   margin-right: $spacer;
 }
 
-.pf-alert__text {
+.#{$pf-repo}-alert__text {
   flex-grow: 1;
 }
 
