--- a/source/scss/_pf-icons.scss
+++ b/source/scss/_pf-icons.scss
@@ -237,17 +237,17 @@ limitations under the License.
 }
 
 // Display icon at large or medium size
-.pf-icon--lg {
+.#{$pf-repo}-icon--lg {
   font-size: $pf-icon-size-lg;
 }
-.pf-icon--md {
+.#{$pf-repo}-icon--md {
   font-size: $pf-icon-size-md;
 }
 
 // Display circle around the icon
 // width/height value should be 4px (i.e. 2 x border-width) greater than
 // line-height value to accommodate 2px border on each side
-.pf-icon--circle {
+.#{$pf-repo}-icon--circle {
   width: calc(2em + 4px);
   height: calc(2em + 4px);
   line-height: 2em;
