creates a secondary nav component

--- a/source/_patterns/components/tabs/tabs.hbs
+++ b/source/_patterns/components/tabs/tabs.hbs
@@ -6,8 +6,8 @@ tabsSecondaryLevel - adds a secondary level menu
 tabstabsSecondaryDropdown - adds a dropdown tab to the secondary menu
 tabsSecondaryDropdownActive - shows the dropdown open if true
 --}}
-<nav role="navigation">
-  <ul class="nav nav-tabs {{#if pfTabsAsPrimary }}pf-nav-tabs{{/if }}" role="tablist">
+
+  <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item" {{#unless tabsDropdown }}aria-selected="true"{{/unless }}><a href="#" role="tab" class="nav-link {{#unless tabsDropdown }}active{{/unless }}">Tab One</a></li>
     <li class="nav-item"><a href="#" role="tab" class="nav-link">Tab Two</a></li>
     <li class="nav-item"><a href="#" role="tab" class="nav-link">Tab Three</a></li>
@@ -35,33 +35,3 @@ tabsSecondaryDropdownActive - shows the dropdown open if true
   {{/if }}
 
   </ul>
-  {{#if tabsSecondaryLevel }}
-  <ul class="nav nav-tabs pf-nav-tabs" role="tablist">
-    <li class="nav-item" {{#unless tabsSecondaryDropdownActive }}aria-selected="true"{{/unless }}><a href="#" role="tab" class="nav-link {{#unless tabsSecondaryDropdownActive }}active{{/unless }}">Secondary Tab One</a></li>
-    <li class="nav-item"><a href="#" role="tab" class="nav-link">Secondary Tab Two</a></li>
-    <li class="nav-item"><a href="#" role="tab" class="nav-link">Secondary Tab Three</a></li>
-    <li class="nav-item"><a href="#" role="tab" class="nav-link disabled">Secondary Disabled</a></li>
-    <li class="nav-item"><a href="#" role="tab" class="nav-link">Secondary Tab Five</a></li>
-    {{#if tabsSecondaryDropdown }}
-      <li class="nav-item dropdown {{#if
-        tabsSecondaryDropdownActive }}show{{/if }}">
-        <a class="nav-link dropdown-toggle {{#if tabsSecondaryDropdownActive}} active {{/if }}"
-          role="button"
-          aria-haspopup="true"
-          aria-expanded="true"
-          data-toggle="dropdown"
-          href="#">
-          Secondary Menu Dropdown
-        </a>
-        <div class="dropdown-menu" role="menu">
-          <a class="dropdown-item">Action</a></a>
-          <a class="dropdown-item">Another action</a></a>
-          <a class="dropdown-item">Something else here</a></a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item">Separated link</a></a>
-        </div>
-      </li>
-    {{/if }}
-  </ul>
-  {{/if }}
-</nav>
