--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -60,6 +60,7 @@ limitations under the License.
 @import "node_modules/bootstrap/scss/nav";
 @import "pf-nav";
 @import "node_modules/bootstrap/scss/navbar";
+@import "pf-secondary-nav";
 @import "node_modules/bootstrap/scss/card";
 @import "pf-card";
 @import "node_modules/bootstrap/scss/breadcrumb";
