--- a/source/_patterns/templates/basic-template.hbs
+++ b/source/_patterns/templates/basic-template.hbs
@@ -2,9 +2,10 @@
   <h1>Basic Page Title</h1>
   <p>This is a basic template with some of the elements that are avaliable on PatternFly 5 CSS</p>
 
-  {{> components-tabs tabsSecondaryLevel="true"
-  tabsSecondaryDropdown="true" }}
-
+  <nav role="navigation">
+    {{> components-tabs }}
+    {{> components-secondary-nav }}
+  </nav>
 
   <div class="row" role="tabpanel">
 
