--- a/source/scss/_pf-nav.scss
+++ b/source/scss/_pf-nav.scss
@@ -40,47 +40,47 @@ limitations under the License.
   // }
 }
 
-// Patternfly-style tabs
-.pf-nav-tabs {
-
-  // .nav-item {
-  //   margin-bottom: 0;
-  // }
-  .nav-link {
-    border-width: 0 0 ($nav-tabs-border-width * 2) 0;
-    border-color: transparent;
-    margin: $pf-spacer-xs $pf-spacer-sm 0; // remove padding and add margin so that the underline is only beneath the text
-    padding: 0 0 $pf-spacer-xxxs 0;
-    font-size: $font-size-base;
-
-    @include hover-focus-active {
-      border-color: $nav-tabs-active-link-hover-border-color;
-    }
-
-    &.active {
-      border-color: $nav-tabs-active-link-hover-color;
-      @include hover-focus-active {
-        border-color: $nav-tabs-active-link-hover-color;
-      }
-    }
-  }
-
-  .dropdown-menu {
-    margin-top: 0;
-    margin-left: $pf-spacer-sm;
-  }
-
-  .nav-link.active,
-  .nav-item.show .nav-link {
-    color: $nav-tabs-active-link-hover-color;
-    background-color:inherit;
-    border-color: inherit;
-  }
-
-// if Patternfly-style tabs are used as a secondary menu to another .nav-tabs
-  .nav-tabs + & {
-    .nav-link {
-      padding-bottom: $pf-spacer-xxxs;
-    }
-  }
-}
+// // Patternfly-style tabs
+// .pf-nav-tabs {
+//
+//   // .nav-item {
+//   //   margin-bottom: 0;
+//   // }
+//   .nav-link {
+//     border-width: 0 0 ($nav-tabs-border-width * 2) 0;
+//     border-color: transparent;
+//     margin: $pf-spacer-xs $pf-spacer-sm 0; // remove padding and add margin so that the underline is only beneath the text
+//     padding: 0 0 $pf-spacer-xxxs 0;
+//     font-size: $font-size-base;
+//
+//     @include hover-focus-active {
+//       border-color: $nav-tabs-active-link-hover-border-color;
+//     }
+//
+//     &.active {
+//       border-color: $nav-tabs-active-link-hover-color;
+//       @include hover-focus-active {
+//         border-color: $nav-tabs-active-link-hover-color;
+//       }
+//     }
+//   }
+//
+//   .dropdown-menu {
+//     margin-top: 0;
+//     margin-left: $pf-spacer-sm;
+//   }
+//
+//   .nav-link.active,
+//   .nav-item.show .nav-link {
+//     color: $nav-tabs-active-link-hover-color;
+//     background-color:inherit;
+//     border-color: inherit;
+//   }
+//
+// // if Patternfly-style tabs are used as a secondary menu to another .nav-tabs
+//   .nav-tabs + & {
+//     .nav-link {
+//       padding-bottom: $pf-spacer-xxxs;
+//     }
+//   }
+// }
