--- a/source/scss/_pf-variables.scss
+++ b/source/scss/_pf-variables.scss
@@ -365,6 +365,8 @@ $font-size-h6: pf-prem(12) !default; // 12px
 
 $headings-margin-bottom: $pf-spacer-sm !default;
 $pf-headings-margin-top: $pf-spacer-xl !default;
+
+$pf-typography-margin-bottom: $pf-spacer-md !default;
 $headings-font-weight: $pf-font-weight-light !default;
 
 $lead-font-weight: $pf-font-weight-light !default;
