--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -39,6 +39,7 @@ limitations under the License.
 
 // Basics
 @import "node_modules/bootstrap/scss/reboot";
+@import "pf-reboot";
 @import "node_modules/bootstrap/scss/type";
 @import "pf-type";
 @import "node_modules/bootstrap/scss/images";
