--- a/source/_patterns/templates/typography/vertical-rhythm.hbs
+++ b/source/_patterns/templates/typography/vertical-rhythm.hbs
@@ -1,8 +1,9 @@
-<section class="container-fluid pf-verticalRhythm">
+<section class="container-fluid">
+  <div class="pf-vertical-rhythm">
     <div class="row">
       <div class="col-md-12">
         <h1>Vertical Ryhthm</h1>
-        <p>At the component level all vertical rhythm is removed. In cases where you have a section where you want to implement vertical rhythm apply the <code>.verticalRhythm</code> and all typeography level tags will receive a bottom margin. All headings will also be given the appropriate size and weight.</p>
+        <p>At the component level all vertical rhythm is removed. In cases where you have a section where you want to implement vertical rhythm apply the <code>.vertical-rhythm</code> and all typeography level tags will receive a bottom margin. All headings will also be given the appropriate size and weight.</p>
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
@@ -29,4 +30,5 @@
         </dl>
       </div>
   </div>
+</div>
 </section>
