updates class to pf-vertical-rhythm

--- a/source/scss/_pf-mixins.scss
+++ b/source/scss/_pf-mixins.scss
@@ -105,7 +105,7 @@ limitations under the License.
 
 // Vertical Rhythm
 //
-// Used in conjunction with .verticalRhythm to apply size, weight, and margins to type.
+// Used in conjunction with .vertical-rhythm to apply size, weight, and margins to type.
 
 @mixin pf-typography-styles(
   $weight: $pf-font-weight-regular,
