fixes missed class updates

--- a/source/_patterns/templates/typography/typography.hbs
+++ b/source/_patterns/templates/typography/typography.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="pf-verticalRhythm">
+    <div class="pf-vertical-rhythm">
       <div class="row">
         <div class="col-md-12">
           <h3>PatternFly Typography</h3>
