--- a/source/scss/_pf-type.scss
+++ b/source/scss/_pf-type.scss
@@ -23,63 +23,64 @@ html { font-size: $pf-font-size-root;}
 
 body { font-weight: $pf-font-weight-regular;}
 
-strong {font-weight: $pf-font-weight-bold; }
+strong {font-weight: $pf-font-weight-bold;}
 
-p { margin-bottom: $pf-typography-margin-bottom; }
+p { margin-bottom: $pf-typography-margin-bottom;}
 
 h1 {
-  @include pf-typography-styles();
+  @include pf-heading-styles();
 }
 
 h2 {
-  @include pf-typography-styles();
+  @include pf-heading-styles();
 }
 
 h3 {
-  @include pf-typography-styles();
+  @include pf-heading-styles();
 }
 
 h4 {
-  @include pf-typography-styles($pf-font-weight-semi-bold);
+  @include pf-heading-styles($weight: $pf-font-weight-semi-bold);
 }
 
 .h1, .pf-vertical-rhythm h1 {
-      @include pf-typography-styles(
-      $pf-font-weight-light,
-      $font-size-h1,
-      $pf-headings-margin-top,
-      $pf-typography-margin-bottom
-      )
+  @include pf-heading-styles(
+    $weight: $pf-font-weight-light,
+    $size: $font-size-h1,
+    $margin-top: $pf-headings-margin-top,
+    $margin-bottom: $pf-typography-margin-bottom
+  )
 }
 
 .h2, .pf-vertical-rhythm h2 {
-      @include pf-typography-styles(
-      $pf-font-weight-light,
-      $font-size-h2,
-      $pf-headings-margin-top,
-      $pf-typography-margin-bottom
-      )
+  @include pf-heading-styles(
+    $weight: $pf-font-weight-light,
+    $size: $font-size-h2,
+    $margin-top: $pf-headings-margin-top,
+    $margin-bottom: $pf-typography-margin-bottom
+  )
 }
 
 .h3, .pf-vertical-rhythm h3 {
-      @include pf-typography-styles(
-      $pf-font-weight-light,
-      $font-size-h3,
-      $pf-headings-margin-top,
-      $pf-typography-margin-bottom
-      )
+  @include pf-heading-styles(
+    $weight: $pf-font-weight-light,
+    $size: $font-size-h3,
+    $margin-top: $pf-headings-margin-top,
+    $margin-bottom: $pf-typography-margin-bottom
+  )
 }
 
 .h4, .pf-vertical-rhythm h4 {
-      @include pf-typography-styles(
-      $pf-font-weight-semi-bold,
-      $font-size-h4,
-      $pf-headings-margin-top,
-      $pf-typography-margin-bottom
-      )
+  @include pf-heading-styles(
+    $weight: $pf-font-weight-semi-bold,
+    $size: $font-size-h4,
+    $margin-top: $pf-headings-margin-top,
+    $margin-bottom: $pf-typography-margin-bottom
+  )
 }
 
 p,ul,ol,dl,blockquote,pre,td,th,textarea {
+
   .pf-vertical-rhythm & {
     margin-bottom: $pf-typography-margin-bottom;
     &:last-child {
