--- a/source/_patterns/templates/typography/vertical-rhythm.hbs
+++ b/source/_patterns/templates/typography/vertical-rhythm.hbs
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="pf-vertical-rhythm">
-          <h1>Vertical Ryhthm</h1>
+          <h1>Vertical Rhythm</h1>
           <p>At the component level all vertical rhythm is removed. In cases where you have a section where you want to implement vertical rhythm apply the <code>.pf-vertical-rhythm</code> and all typeography level tags will receive a margin. All headings will also be given the appropriate size and weight.</p>
           <h1>Heading 1</h1>
           <h2>Heading 2</h2>
