updates linting issues

--- a/source/_patterns/templates/typography/vertical-rhythm.hbs
+++ b/source/_patterns/templates/typography/vertical-rhythm.hbs
@@ -1,7 +1,7 @@
-<section class="container-fluid">
+<div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <div class="pf-vertical-rhythm">
+        <section class="pf-vertical-rhythm">
           <h1>Vertical Rhythm</h1>
           <p>At the component level all vertical rhythm is removed. In cases where you have a section where you want to implement vertical rhythm apply the <code>.pf-vertical-rhythm</code> and all typeography level tags will receive a margin. All headings will also be given the appropriate size and weight.</p>
           <h1>Heading 1</h1>
@@ -28,7 +28,7 @@
             <dt>Description list item</dt>
             <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus earum debitis, ducimus dolor voluptate numquam eos explicabo corrupti inventore dolorum dicta, fugit itaque. Dicta ad qui, blanditiis quia vel dignissimos.</dd>
           </dl>
-      </div>
+        </section>
   </div>
 </div>
-</section>
+</div>
