--- a/source/scss/_pf-mixins.scss
+++ b/source/scss/_pf-mixins.scss
@@ -28,24 +28,20 @@ limitations under the License.
   border-color: $border;
   @include box-shadow($btn-box-shadow);
 
-  @include gradient-y(
-    $start-color: $background-start,
-      $end-color: $background-end,
-    $start-percent: $pf-gradient-percent-start,
-      $end-percent: $pf-gradient-percent-end);
+  @include gradient-y($start-color: $background-start, $end-color: $background-end, $start-percent: $pf-gradient-percent-start, $end-percent: $pf-gradient-percent-end);
 
   @include hover {
     background-image: none;
     color: $color;
     background-color: $active-background;
-        border-color: $active-border;
+    border-color: $active-border;
   }
 
   &:focus,
   &.focus {
     color: $color;
     background-color: $active-background;
-        border-color: $active-border;
+    border-color: $active-border;
   }
 
   &:active,
@@ -53,7 +49,7 @@ limitations under the License.
   .open > &.dropdown-toggle {
     color: $color;
     background-color: $active-background;
-        border-color: $active-border;
+    border-color: $active-border;
     // Remove the gradient for the pressed/active state
     background-image: none;
     @include box-shadow($btn-active-box-shadow);
@@ -63,22 +59,23 @@ limitations under the License.
     &.focus {
       color: $color;
       background-color: darken($background, 17%);
-          border-color: darken($border, 25%);
+      border-color: darken($border, 25%);
     }
   }
 
   &.disabled,
   &:disabled {
     background-image: none;
+
     &:focus,
     &.focus {
       background-color: $background;
-          border-color: $border;
+      border-color: $border;
     }
     @include hover {
       background-color: $background;
-          border-color: $border;
-          background-image: none;
+      border-color: $border;
+      background-image: none;
     }
   }
 }
@@ -86,18 +83,14 @@ limitations under the License.
 
 // Patternfly gradient
 @mixin pf-gradient() {
-  @include gradient-y(
-    $start-color: $pf-gradient-color-start,
-    $end-color: $pf-gradient-color-end,
-    $start-percent: $pf-gradient-percent-start,
-    $end-percent: $pf-gradient-percent-end);
+  @include gradient-y($start-color: $pf-gradient-color-start, $end-color: $pf-gradient-color-end, $start-percent: $pf-gradient-percent-start, $end-percent: $pf-gradient-percent-end);
 }
 
 
 // Box shadow mixin
 @mixin box-shadow($top, $left, $blur, $size, $color, $inset: false) {
   @if $inset {
-    box-shadow:inset $top $left $blur $size $color;
+    box-shadow: inset $top $left $blur $size $color;
   } @else {
     box-shadow: $top $left $blur $size $color;
   }
@@ -105,15 +98,11 @@ limitations under the License.
 
 // Vertical Rhythm
 //
-// Used in conjunction with .vertical-rhythm to apply size, weight, and margins to type.
+// Used in conjunction with .vertical-rhythm to apply size, weight, and margins to headings.
 
-@mixin pf-heading-styles (
-  $weight: null,
-  $size: null,
-  $margin-top: null,
-  $margin-bottom: null) {
-  font-size:$size;
+@mixin pf-heading-styles($weight: null, $size: null, $margin-top: null, $margin-bottom: null) {
+  font-size: $size;
   font-weight: $weight;
   margin-top: $margin-top;
-  margin-bottom:$margin-bottom;
+  margin-bottom: $margin-bottom;
 }
